--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -16,12 +16,12 @@
     border: 1px solid var(--primary);
 }
 
-.btn-outline {
-    background-color: transparent;
-    color: #fff;
-    padding: 8px 20px;
-    border: 1px solid var(--primary);
-    transition: all 0.3s ease-out;
+.btn--outline {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease-out;
 }
 
 .btn--medium {
