--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -17,10 +17,10 @@ video {
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
 }
-/*
+
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 80px;
   margin-top: -100px;
 }
 
@@ -33,40 +33,42 @@ video {
 }
 
 .hero-btns {
-  margin-top: 32px;
+    margin-top: 32px;
 }
+
 
 .hero-btns .btn {
-  margin: 6px;
+  margin: 10px;
 }
 
-.fa-play-circle {
+
+.fa-solid fa-location-crosshairs {
   margin-left: 4px;
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
-  }
+    .hero-container > h1 {
+        font-size: 70px;
+        margin-top: -150px;
+    }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
-  }
+}
 
-  .hero-container > p {
+.hero-container > p {
     font-size: 30px;
-  }
+}
 
-  .btn-mobile {
+.btn-mobile {
     display: block;
     text-decoration: none;
-  }
+}
 
-  .btn {
+.btn {
     width: 100%;
-  }
-} */
+}
+}
